--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=SpringSecurityAuth1
+spring.datasource.url=jdbc:h2:mem:userdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+spring.security.oauth2.client.registration.github.client-id=Ov23lilyBnGt2M6M9EAn
+spring.security.oauth2.client.registration.github.client-secret=84d1a06ccea50054dd719fc3861e9ee4b03f33dc
+
+spring.security.oauth2.client.registration.google.client-id=561523865103-h66k237j65b905bljps54mu5nftvdj06.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
