--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 #Ajout de OAuth 2.0 pour GitHub
-spring.security.oauth2.client.registration.github.client-id=Ov23lilyBnGt2M6M9EAn
-spring.security.oauth2.client.registration.github.client-secret=84d1a06ccea50054dd719fc3861e9ee4b03f33dc
+#spring.security.oauth2.client.registration.github.client-id=Ov23lilyBnGt2M6M9EAn
+#spring.security.oauth2.client.registration.github.client-secret=84d1a06ccea50054dd719fc3861e9ee4b03f33dc
 
 #Ajout de OAuth 2.0 pour Google
 #spring.security.oauth2.client.registration.google.client-id=561523865103-h66k237j65b905bljps54mu5nftvdj06.apps.googleusercontent.com
