--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,12 @@ spring.sql.init.mode=always
 
 #Ajout de OAuth 2.0 pour GitHub
 #On le cache
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_OAUTH_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_OAUTH_CLIENT_SECRET}
 
 #Ajout de OAuth 2.0 pour Google
 #On le cache
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET}
+
 
